v3.8.3 (XXXX-XX-XX)
-------------------

* When using Indexes within traversals (e.g. [_from, date]) and filter based on
  a function (e.g. FILTER path.edges[0].date <= DATE_ADD(@now, 5, "day")) this
  function was passed through to the index. The index cannot evaluate this
  function and returned incorrect results. Now all functions are evaluted before
  looking into the index. Fixes BTS-407.

* Fixed arangodump not overwriting dump directory when flags `--all-databases`
  and `--overwrite` are set to true.

* Fix issues during rolling upgrades from 3.8.0 to 3.8.x (x >= 1) and from 3.7.x
  (x <= 12) to 3.8.3. The problem was that older versions did not handle
  following term ids that are sent from newer versions during synchronous
  replication operations.

* Close a potential gap during shard synchronization when moving from the
  initial sync step to the WAL tailing step. In this small gap the leader 
  could purge some of the WAL files that would be required by the following
  WAL tailing step. This was possible because at the end of the initial sync
  step, the snapshot on the leader is released, and there is a small window
  of time before the follower will issue its first WAL tailing request.
    
* Improve Shards overview in web UI: the number of currently syncing shards is
  now displayed per collection. Additionally, shards on failed servers are now
  displayed in a different color.

* Fixed BTS-637: Slow SynchronizeShard jobs which need to copy data could block
  quick SynchronizeShard jobs which have the data and only need to resync.

* When enabling the cluster supervision maintenance mode via the web UI, there
  is now the possibility to select a duration for the maintenance mode.
  Previous versions of ArangoDB always enabled the maintenance mode for one
  hour, without allowing any choice here.

* Fixed SEARCH-261: Fix possible race between file creation and directory
  cleaner (ArangoSearch).
